--- a/src/others/Others.css
+++ b/src/others/Others.css
@@ -1,10 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
 .notfound {
     height: 100vh;
     display: flex;
@@ -20,6 +13,7 @@
     margin: 0;
     color: #2B1B12;
     font-weight: 800;
+    letter-spacing: 5px;
 }
 
 .notfound h2 {
